# MLOps_project

./: .dockerignore  .env.template  .gcloudignore  .gitignore  .pre-commit-config.yaml  CLOUD_README.md  Dockerfile  README.md  app.py  cloudbuild.drift.yaml  cloudbuild.yaml  config_cpu.yaml  data.dvc  drift_report.html  export_model.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_inference.txt  run_image.txt  tasks.py
.cloudbuild/api/: .gcloudignore  Dockerfile  README.md  cloudbuild.yaml
.cloudbuild/api/src/ai_vs_human/: api.py  data.py  data_drif.py  data_drift_monitoring_api.py  upload_reference_features.py  visualize.py
.cloudbuild/drift/: .gcloudignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
.cloudbuild/drift/src/ai_vs_human/: api.py  (+1 more)
.dvc/: config
.github/: dependabot.yaml
.github/workflows/: integration_tests.yaml  linting.yaml  load_test.yaml  stage_model.yaml  tests.yaml  unit_tests.yaml
configs/: sweep_config.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: drift.md  index.md
reports/: README.md  load_test_report.html
scripts/: prepare_cloudbuild_context.py
src/ai_vs_human/: api.py  client.py  data copy.py  data.py  data_drif.py  data_drift_monitoring_api.py  download_best_model.py  evaluate.py  image_data_drift.py  model.py  sweep.py  train.py  train_features.py  visualize.py
tests/: test_api.py  test_data.py  test_model.py
tests/integrationtests/: test_apis.py
tests/loadtests/: README.md  __init__.py  locustfile.py
tests/performancetests/: test_model.py
tests/unittests/: test_api.py  test_data.py  test_model.py
wandb/: latest-run
wandb/run-20260115_110928-4ji6d0dy/: run-4ji6d0dy.wandb
wandb/run-20260115_110928-4ji6d0dy/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260115_112118-o8336e6x/: run-o8336e6x.wandb
wandb/run-20260115_112118-o8336e6x/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260115_124702-s0pzwt3d/: run-s0pzwt3d.wandb
wandb/run-20260115_124702-s0pzwt3d/files/: config.yaml  wandb-metadata.json  wandb-summary.json
