[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "ai_vs_human"
version = "0.0.1"
description = "detect if images are AI generated"
authors = [
  { name = "group22", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.65.0",
    "dvc-gs>=3.0.2",
    "fastapi==0.115.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pillow>=12.1.0",
    "python-multipart>=0.0.9",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "typer==0.21.1",
    "uvicorn==0.34.0",
    "kagglehub>=0.2.0",
    "wandb>=0.23.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
    "httpx>=0.28.1",
    "prometheus-client>=0.24.1",
    "evidently>=0.7.20",
    "scikit-learn>=1.8.0",
    "pandas>=2.3.3",
    "transformers>=4.57.6",
    "ruff>=0.1.3",
    "zeus>=0.13.1",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
    "mypy>=1.19.1",
    "httpx>=0.27.0",
    "locust>=2.43.1",
    "requests>=2.32.5",
    "types-pyyaml>=6.0.12.20250915",
    "pytest-cov>=6.3.0",
    "types-requests>=2.32.4.20260107",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
source = ["src/ai_vs_human"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.12"
files = ["src"]
mypy_path = ["src"]
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_configs = true
